--- a/commanding_node/params/arm_params.yaml
+++ b/commanding_node/params/arm_params.yaml
@@ -10,5 +10,8 @@ Hover_time: 10
 Hover_sensor_altitude: 1.2
 Hover_sensor_altitude_max: 1.5
 Hover_sensor_altitude_min: 1
-Landing_sensor_altitude_min: 0.3
-Secure_landing_time: 2
+Landing_sensor_altitude_min: 0.5
+Secure_time_landing: 20
+Time_between_messages: 0.02
+Landing_thrust: 0.4
+Max_time_landing: 20
